clusters/building-blocks/other/apps/karakeep/app/chrome-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: chrome
  ports:
    - protocol: TCP
      port: 9222
      targetPort: 9222
  type: ClusterIP
