clusters/building-blocks/other/apps/karakeep/app/karakeep-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: karakeep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
